--- a/.github/workflows/rocknix-nightly0712-public.yml
+++ b/.github/workflows/rocknix-nightly0712-public.yml
@@ -178,6 +178,7 @@ jobs:
         with:
           tag_name: ${{ steps.detect.outputs.TAG_NAME }}
           name: "[Rocknix Nightly构建] ${{ steps.detect.outputs.LATEST_VERSION }}"
+          draft: true 
           body: |
             🎉 本次 Nightly 构建成功！
             - 版本号: **${{ steps.detect.outputs.LATEST_VERSION }}**
