--- a/.github/workflows/rocknix-stable-public.yml
+++ b/.github/workflows/rocknix-stable-public.yml
@@ -157,7 +157,7 @@ jobs:
           if [ -n "${{ github.event.inputs.selected_archs }}" ]; then
             IFS=',' read -ra base <<< "${{ github.event.inputs.selected_archs }}"
           else
-            base=("3566_stable" "x55_stable" "3326_stable" "h700_stable" "3326-emmc_stable" "sm8250_stable")
+            base=("3566_stable" "x55_stable" "3326_stable" "h700_stable" "sm8250_stable" "sm8550_stable")
           fi
           result="["; for arch in "${base[@]}"; do result+="\"$arch\","; done
           result="${result%,}]"
